feat: added ribbon and highlight

--- a/generators/templates/stories.tsx.hbs
+++ b/generators/templates/stories.tsx.hbs
@@ -9,6 +9,17 @@ export default {
     description:
       'Description padrão para todos os stories caso nada seja passado',
   },
+
+  parameters: {
+    viewport: {
+      defaultViewport: 'mobile1',
+    }
+    
+    layout: {
+      default: 'fullscreen',
+    },
+  },
+  
 } as Meta;
 
 export const Default: Story = (args) => <{{pascalCase name}} {...args} />;
