--- a/generators/templates/test.tsx.hbs
+++ b/generators/templates/test.tsx.hbs
@@ -3,7 +3,7 @@ import { render, screen } from '@testing-library/react';
 import {{pascalCase name}} from '.';
 
 describe('<{{pascalCase name}} />', () => {
-  it('should render heading', () => {
+  it('should render {{pascalCase name}}', () => {
     render(<{{pascalCase name}} />);
 
     expect(
